modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion06b.scr
module bad.reach.globals.grecursion.Recursion06b;


global protocol Recursion6(role A, role B)
{
	rec X
	{
		choice at A
		{
			l1() from A to B;
			continue X;
			//l1() from A to B;  // Uncomment bad
		}
		or
		{
			l2() from A to B;
		}
		l3() from A to B;  // Uncomment bad. "General recursion" issue ("unfold stacking"). Fix is to move inside the second choice block
	}
	l4() from A to B;
}

